--- a/index.html
+++ b/index.html
@@ -35,19 +35,28 @@
 			font-family: 'Roboto' !important;
 			min-width: 0px !important;
 		}
+		.contacts > div.icon::before{
+			font-size: 14px;
+			margin-top: 5px;
+		}
+		.resume a {
+			color: #444444;
+		}
 		</style>
 </head> 
 <body>
 	<div class="headerPreview">
-		
+		<!-- overflow: hidden;
+    background-size: cover;
+    background-position: center; -->
 	</div>
 	<div class="preview public">
 		<div class="resume tpl6  fsize0 lineh0" id="8vXroeHZc5o" style="display: flex;">
 			<div class="input-content side-bar body" style="height: 1123px;">
 				<div class="block contacts">
 					<div class="nobreak element head">
-						<div class="photo">
-							<img src="./Front-end developer_files/getimage.php" alt="">
+						<div class="photo"s>
+							<img src="/assets/foto.jpg" alt="" style="width: 100px; height: 100px; object-fit: cover; object-position: center;">
 						</div>
 						<div class="clear"></div>
 						<div class="fio header">Barvinko <br> Vladyslav OLEKSANDROVYCH</div>
@@ -190,7 +199,7 @@
 									<span>json</span>
 								</li>
 								<li class="skill item nobreak">
-									<span>Adaptive layout</span>
+									<span>Rest API</span>
 								</li>
 								<li class="skill item nobreak">
 									<span>Vue.js(basic)</span>
@@ -240,6 +249,8 @@
 								</div>
 							</div>
 							<div class="name">Beginning of web development and programming</div>
+							<div><a href="https://ortdnipro.org/web/">https://ortdnipro.org/web/</a> </div>
+							<div>I sdy</div>
 						</div>
 					</div>
 					<div class="element course">
@@ -251,6 +262,7 @@
 								</div>
 							</div>
 							<div class="name">JavaScript in web-development</div>
+							<div><a href="https://ortdnipro.org/js/">https://ortdnipro.org/js/</a> </div>
 						</div>
 					</div>
 					<div class="element course">
@@ -262,7 +274,17 @@
 								</div>
 							</div>
 							<div class="name">English</div>
+							<div><a href="https://indigo-dnepr.com/">https://indigo-dnepr.com/</a> </div>
 						</div>
+					</div>
+					<div class="block educations">
+						<div class="element univer">
+							<div class="nobreak">
+								<h3 class="header mt-4">experience</h3>
+								<div class="fac" style="text-align: justify;">I was developing: layout of clothing store used Grid, check bank cards useing the algorithm of Luhn and checking TIN, finding locations of user and his nearest ATMs from API of Privat Bank, a news site with current news, searching in text with help regular expression, displaying countries, currencies and flags of their neighbors from API with list search on Vue.js. all developments are on github.</div>
+							</div>
+						</div>
+						
 					</div>
 				</div>
 			</div>
