--- a/index.html
+++ b/index.html
@@ -204,6 +204,9 @@
 								<li class="skill item nobreak">
 									<span>Vue.js(basic)</span>
 								</li>
+								<li class="skill item nobreak">
+									<span>Visual Studio Code</span>
+								</li>
 							</div>
 						</div>
 						<div class="block qualities">
@@ -250,7 +253,6 @@
 							</div>
 							<div class="name">Beginning of web development and programming</div>
 							<div><a href="https://ortdnipro.org/web/">https://ortdnipro.org/web/</a> </div>
-							<div>I sdy</div>
 						</div>
 					</div>
 					<div class="element course">
