--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 									<li class="nobreak language">
 										<div>
 											<div class="lang subhead item">English</div>
-											<div class="item levels">
+											<!-- <div class="item levels">
 												<table border="0" cellspacing="0" cellpadding="0">
 													<tbody>
 														<tr>
@@ -163,10 +163,10 @@
 												<div class="clear">
 																
 												</div>
-											</div>
-											<div class="levelname mark item">B1 - Intermediate
+											</div> -->
+											<!-- <div class="levelname mark item">B1 - Intermediate
 
-											</div>
+											</div> -->
 											<div class="mark space">&nbsp;</div>
 										</div>
 									</li>
