--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="block skills">
+						<div class="block skills mt-4">
 							<div class="element">
 								<div class="nobreak">
 									<div>
