--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 		</style>
 </head> 
 <body>
-	<div class="headerPreview">
+	<!-- <div class="headerPreview">
 		<!-- overflow: hidden;
     background-size: cover;
     background-position: center; -->
-	</div>
+	</div> 
 	<div class="preview public">
 		<div class="resume tpl6  fsize0 lineh0" id="8vXroeHZc5o" style="display: flex;">
 			<div class="input-content side-bar body" style="height: 1123px;">
