--- a/index.html
+++ b/index.html
@@ -4,18 +4,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<link rel="canonical" href="https://myresume.ru/resume/8vXroeHZc5o/">
-		<title>Резюме: Front-end developer</title>
-		<!-- <meta name="description" content="Барвинко Владислав Олександрович | Желаемая должность: Front-end developer | Возраст: 21 год | Профессиональные навыки: JavaScript, HTML, CSS, Bootsatrap, Git, json, Адаптивная верстка">
-		<meta property="og:title" content="Резюме: Front-end developer">
-		<meta property="og:url" content="https://myresume.ru/resume/8vXroeHZc5o/">
-		<meta property="og:description" content="Барвинко Владислав Олександрович | Желаемая должность: Front-end developer | Возраст: 21 год | Профессиональные навыки: JavaScript, HTML, CSS, Bootsatrap, Git, json, Адаптивная верстка">
-		<meta property="og:type" content="profile">
-		<meta property="fb:app_id" content="641456559648624">
-		<meta property="og:image" content="https://myresume.ru/images/resume/8vXroeHZc5o.png">
-		<meta property="og:image:width" content="794">
-		<meta property="og:image:height" content="417">
-		<meta property="profile:first_name" content="Владислав">
-		<meta property="profile:last_name" content="Барвинко"> -->
+		<title>Resume</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -45,10 +34,8 @@
 		</style>
 </head> 
 <body>
-	<!-- <div class="headerPreview">
-		<!-- overflow: hidden;
-    background-size: cover;
-    background-position: center; -->
+	<div class="headerPreview">
+
 	</div> 
 	<div class="preview public">
 		<div class="resume tpl6  fsize0 lineh0" id="8vXroeHZc5o" style="display: flex;">
