--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 							</div>
 							<!-- <i class="fas fa-info pr-2"></i> -->
-							age: 21 
+							age: 22 
 						</div>
 					</div>
 					<div class="header-div">
@@ -177,19 +177,31 @@
 									<span>CSS</span>
 								</li>
 								<li class="skill item nobreak">
-									<span>Bootsatrap</span>
+									<span>Bootstrap</span>
 								</li>
 								<li class="skill item nobreak">
 									<span>Git</span>
 								</li>
 								<li class="skill item nobreak">
-									<span>json</span>
+									<span>JSON</span>
 								</li>
 								<li class="skill item nobreak">
 									<span>Rest API</span>
 								</li>
 								<li class="skill item nobreak">
 									<span>Vue.js(basic)</span>
+								</li>
+								<li class="skill item nobreak">
+									<span>Node.js</span>
+								</li>
+								<li class="skill item nobreak">
+									<span>Express</span>
+								</li>
+								<li class="skill item nobreak">
+									<span>MongoDB</span>
+								</li>
+								<li class="skill item nobreak">
+									<span>Mongoose</span>
 								</li>
 								<li class="skill item nobreak">
 									<span>Visual Studio Code</span>
@@ -224,7 +236,7 @@
 											<b>University of Customs and Finance, </b><span class="level">Master`s degree</span>
 										</div>
 										<div class="date-div">&nbsp;
-											<div class="mark">2022</div>
+											<div class="mark">2023</div>
 										</div>
 									</div>
 									<div class="fac">FIT, 122-Computer Science</div>
@@ -266,11 +278,23 @@
 							<div><a href="https://indigo-dnepr.com/">https://indigo-dnepr.com/</a> </div>
 						</div>
 					</div>
+					<div class="element course">
+						<div class="nobreak">
+							<div class="hr"></div>
+							<div class="date"><b class="org">EPAM</b>
+								<div class="date-div">&nbsp;
+									<div class="mark date">2022</div>
+								</div>
+							</div>
+							<div class="name">IT Marathon</div>
+							<div><a href="https://certificates.epam.com/certificates/b6eb2a1c-f136-455e-a7b1-257767e8303b">https://certificates.epam.com/certificates/b6eb2a1c-f136-455e-a7b1-257767e8303b</a> </div>
+						</div>
+					</div>
 					<div class="block educations">
 						<div class="element univer">
 							<div class="nobreak">
 								<h3 class="header mt-4">experience</h3>
-								<div class="fac" style="text-align: justify;">I was developing: layout of clothing store used Grid, check bank cards useing the algorithm of Luhn and checking TIN, finding locations of user and his nearest ATMs from API of Privat Bank, a news site with current news, searching in text with help regular expression, displaying countries, currencies and flags of their neighbors from API with list search on Vue.js. all developments are on github.</div>
+								<div class="fac" style="text-align: justify;">I was developing: layout of clothing store used Grid, check bank cards and TIN, finding locations of user and his nearest ATMs from API of Privat Bank. News site with current news, searching in text with help regular expression. Displaying countries, and currencies, and flags of their neighbors from API with list search on Vue.js. Tasks of genetic algorithms. Website which implements secure messaging system with encryption on eleptic curves on Node.js and database - MongoDB.</div>
 							</div>
 						</div>
 						
@@ -285,176 +309,6 @@
 		body .input-content {min-height: 1123px;}
 		body .preview { margin-bottom: 30px; width: 210mm;}
 	</style>
-	<script>
-	window.onload = function() { var h1 = document.querySelector(".input-content.side-bar.body").offsetHeight;var h2 = document.querySelector(".input-content.content-bar.body").offsetHeight;var hmax = Math.max(h1,h2);document.querySelector(".input-content.side-bar.body").style.height = hmax+"px";document.querySelector(".input-content.content-bar.body").style.height = hmax+"px";return;	// pause(300);
-		window.page=1;
-		window.pages=1;
-		window.prev=0;
-		window.lsh=0;
-
-		var data={};
-		data.sb=parseContent("input-content side-bar body");
-		data.cb=parseContent("input-content content-bar body");		
-		d=data;
-		// console.log(data);
-		for (var i = 1; i <= pages; i++) { //console.log(i);
-			splitToPages(data,i);
-		}
-
-		// console.log(data);
-		var i = document.getElementsByClassName("input-content content-bar body");
-		if(i.length) { i[0].parentNode.removeChild(i[0]); }
-		i = document.getElementsByClassName("input-content side-bar body"); 
-		if(i.length) { i[0].parentNode.removeChild(i[0]); }
-		i = document.getElementsByClassName("input-header resume-header"); 
-		if(i.length) { i[0].parentNode.removeChild(i[0]); i[0].classList.remove("input-header"); }
-		document.getElementsByClassName("resume")[0].setAttribute("data-pages", pages);
-		}
-
-	function parseContent(className){
-			var content=[]; lsh=0; prev=0; page = 1;
-			// var els=document.getElementsByClassName("input-content")[0].getElementsByClassName("element");
-			if(!document.getElementsByClassName("input-content side-bar body")[0]){ return [];}
-			var blocks = document.getElementsByClassName(className)[0].getElementsByClassName("block");
-			// console.log(document.getElementsByClassName("input-content "));
-			Array.prototype.forEach.call(blocks, function(b,i) { var block = {"type":"block","className":b.className,"tagName":b.tagName,data:[]}
-				Array.prototype.forEach.call(b.children, function(e,i) { var element = {"type":"element","className":e.className,"tagName":e.tagName,data:[]}
-					Array.prototype.forEach.call(e.children, function(l,i) { var line = {"type":"line","className":l.className,"tagName":l.tagName,data:[]} 
-						// var pageNow = page; deb(l.className,l.innerHTML);
-						//console.log(l.classList);
-						if(l.classList.contains("ql-editor")) { //console.log("resp!!!!!!!!!!!!!!");
-							Array.prototype.forEach.call(l.children, function(sl,i) { var subLine = {"type":"subLine","className":sl.className,"tagName":sl.tagName,data:[]}
-
-								if(sl.tagName=="UL" || sl.tagName=="OL") { 
-									Array.prototype.forEach.call(sl.children, function(sli,i) { var subLineItem = {"type":"subLineItem","className":sli.className,"tagName":sli.tagName,data:[]}
-										if(p = parseLine(sli,"contRespUl")){ //console.log(sli.tagName); 
-											subLineItem.data={"html":sli.innerHTML,"page":p}; 
-											subLine.data.push(subLineItem);
-										}
-									}); 
-								} else { if(p = parseLine(sl,"contResp")){ subLine.data={"html":sl.innerHTML,"page":p}; }}
-								line.data.push(subLine);
-							});
-						} else { if(p = parseLine(l,"cont")){ line.data={"html":l.innerHTML,"page":p}; }; }
-						element.data.push(line);
-					});	
-					block.data.push(element);
-				});					
-				content.push(block);
-			});	
-			// deb(json);
-			pages=Math.max(page,pages);	
-			return content;
-	}
-
-	function splitToPages(data,p) { var page = document.createElement("div"), resume=document.getElementsByClassName("resume")[0],
-		h = document.getElementsByClassName("input-header resume-header")[0]; 
-		page.className="page"; page.setAttribute( "id", "page"+p );
-		side = parsePage(data.sb,"side-bar body",p); 
-		content = parsePage(data.cb,"content-bar body",p); 
-		if(!content) { content = document.createElement('div'); content.className="content-bar body"; }
-		var order = document.getElementsByClassName("resume")[0].getElementsByClassName("input-content")[0].classList.contains("content-bar");
-		// if(h&&p==1){  //console.log([h.offsetHeight,page.offsetHeight]);page.appendChild(h); }
-		if(h&&p==1){ //h.classList.remove("input-header");
-			hoh = h.offsetHeight; 
-			page.style.height = "297mm";
-			header=document.createElement("div"); header.className=h.className; header.innerHTML = h.innerHTML;
-			page.appendChild(header);
-			var div = document.createElement("div");  div.className="flex";
-			div.style.height = 1122-hoh;
-			if(order) { div.appendChild(content); if(side) {div.appendChild(side);} }else { if(side) {div.appendChild(side);} div.appendChild(content); }
-			page.appendChild(div);
-	} else {
-		if(order) { page.appendChild(content); if(side) {page.appendChild(side);} }else { if(side) {page.appendChild(side);} page.appendChild(content); }
-	}	
-		resume.appendChild(page);
-		resume.classList.add("ready"); 
-	}
-
-	function parsePage(barray, className,p) { if(!barray.length) { return false;}
-		var bar = document.createElement("div"),pw = document.createElement("div"); pw.className="barWrapper"; bar.className=className; 
-		barray.forEach(function(b, i, arr) { var block = document.createElement(b.tagName); if(b.className){ block.className=b.className; }
-		b.data.forEach(function(e, i1, arr) { var element = document.createElement(e.tagName); if(e.className){ element.className=e.className; }
-			e.data.forEach(function(l, i2, arr) { var line = document.createElement(l.tagName); if(l.className){ line.className=l.className; }
-				if(Array.isArray(l.data)) {
-				// console.log([Array.isArray(l.data),l.data]);
-					l.data.forEach(function(sl, i3, arr) { var subLine = document.createElement(sl.tagName); if(sl.className){ subLine.className=sl.className; }
-						if(Array.isArray(sl.data)) {
-							sl.data.forEach(function(sli, i4, arr) { 
-								if(sli.data.page==p) { 
-									var subLineItem = document.createElement(sli.tagName); if(sli.className){ subLineItem.className=sli.className; }
-									subLineItem.innerHTML=sli.data.html; 
-									subLine.appendChild(subLineItem);
-								} 
-							});
-							} else { if(sl.data.page==p) {	subLine.innerHTML=sl.data.html;	} }
-						// console.log(["ggg",subLine.innerHTML.length,line.children.length,subLine.innerHTML]);
-						if(subLine.innerHTML.length) {line.appendChild(subLine);}						
-					});
-				} else { if(l.data.page==p) { line.innerHTML=l.data.html; } }
-					if(line.innerHTML.length) {element.appendChild(line);}	
-			});
-			if(element.children.length) {block.appendChild(element);}	
-		});
-		if(block.children.length) {pw.appendChild(block);}	
-		});
-		bar.appendChild(pw);
-		return bar;	
-	}
-
-	function parseLine(e,t){ 
-		var lot = offsetTop(e), lh = e.offsetHeight, ph = 1124,p=15; 
-		// console.log([e,lot,lh,t,prev]);
-		// console.log(["1","lot",lot,"lh",lh,"pot",offsetTop(prev),"poh",prev.offsetHeight,page,e.outerHTML,t]);
-		if( (lot+lh) < ph*page-p-5) {  
-			//deb(["delete",t,e,offsetTop(e),e.innerHTML,e.parentNode,e.parentNode.innerHTML]);
-		} else { 
-			prev.style.height = ph*page - offsetTop(prev)+p; 
-			page++; 
-			// console.log(["2","lot",lot,"lh",lh,"eow",e.offsetWidth,"pot",offsetTop(prev),"poh",prev.offsetHeight,page,e.outerHTML]);
-			parseLine(e,t);
-		}
-		prev=e;
-		return page;
-	}
-
-	function pause(milliseconds) {
-		var dt = new Date();
-		while ((new Date()) - dt <= milliseconds) { /* Do nothing */ }
-	}
-
-	function offsetTop (e){ var top = 0;
-		do {top += e.offsetTop  || 0; e = e.offsetParent; } while(e); 
-		return top;
-	}
-	function deb(t) {
-		document.getElementsByClassName("deb")[0].innerHTML = t;
-	}
-	//////////////////////////////////////////////////////////////////////////////////////////////////////
-	///////////////////// Учесть размеры паддингов сверху и снизу ///////////////////
-	// отключить растягивание на страницу при публичном резюме
-	//////////////////////////////////////////////////////////////////////////////////////////////////////
-
-	// function parseLine(e){ //console.log([e,e.style.display]); //return;
-	//     var lot = offsetTop(e), lh = e.offsetHeight, p = 0; //console.log(lot); return;
-	//     // console.log([lot,lh,page,e]); 
-	// 	if( lot < 1123*page && (lot+lh) > 1123*page-p-2 ) { //console.log(e.classList);
-	// 		var lhp = 1123*page - offsetTop(prev)-1; //console.log(["lhp",lhp, prev.offsetTop, lotpp, prev, e]);
-	// 		// console.log(["offsetTop(e)1",offsetTop(e)]); 
-	// 		console.log(["offsetTop(e)1",offsetTop(e),"lh",lh,"prev.offsetHeight",prev.offsetHeight,"offsetTop(prev)",offsetTop(prev)]);  
-	// 		// prev.style.background="lime"; 		
-	// 		prev.style.height=Math.floor(lhp); lot = 1123*page; 
-	// 		var pbb = document.createElement('p'); pbb.className = 'pbb';
-	// 		prev.classList.add("pba");
-	// 		// pbbe = e.parentNode.insertBefore(pbb, e);
-	// 		//console.log(["offsetTop(e)2",offsetTop(e), "lh",lh,"prev.offsetHeight",prev.offsetHeight,"offsetTop(prev)",offsetTop(prev),"offsetTop(pbbe)",offsetTop(pbbe)]);  
-	//     }
-	//     lsh = Math.max(lsh,(lot+lh));  
-	//     prev=e; page = Math.floor(lsh/1123) + 1 ;
-	// }
-
-
-	</script>
 	<style>body,html{min-width: 0px;background:#efefef !important;} .preview{ border: 1px solid lightgrey; max-height: unset !important; height: unset !important;}body{background:#efefef;margin: auto; overflow-x: hidden; overflow-y: hidden;}</style>
 
 
