--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
 							<div class="icon icon-map-marker fas fa-info">&nbsp;
 
 							</div>
-							<!-- <i class="fas fa-info pr-2"></i> -->
 							age: 22 
 						</div>
 					</div>
@@ -103,63 +102,21 @@
 						</div>
 					</div>
 				</div>
-						<div class="block languages">
-							<div class="nobreak element">
-								<div class="line">
-									<div class="header-div">
-										<h3 class="header">Languages</h3>
-									</div>
-									<li class="nobreak language">
-										<div>
-											<div class="lang subhead item">English</div>
-											<!-- <div class="item levels">
-												<table border="0" cellspacing="0" cellpadding="0">
-													<tbody>
-														<tr>
-															<td class="warp">
-																<span>&nbsp;</span>
-															</td>
-															<td class="level up">
-																<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Слой_1" width="20px" height="5px" x="0px" y="0px" viewBox="0 0 20 5" enable-background="new 0 0 20 5" preserveAspectRatio="none">
-																<rect width="20" height="5"></rect>
-																</svg>
-															</td>
-															<td class="level up">
-																<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Слой_1" width="20px" height="5px" x="0px" y="0px" viewBox="0 0 20 5" enable-background="new 0 0 20 5" preserveAspectRatio="none">
-																<rect width="20" height="5"></rect>
-																</svg>
-															</td>
-															<td class="level">
-																<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Слой_1" width="20px" height="5px" x="0px" y="0px" viewBox="0 0 20 5" enable-background="new 0 0 20 5" preserveAspectRatio="none">
-																<rect width="20" height="5"></rect>
-																</svg>
-															</td>
-															<td class="level">
-																<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Слой_1" width="20px" height="5px" x="0px" y="0px" viewBox="0 0 20 5" enable-background="new 0 0 20 5" preserveAspectRatio="none">
-																<rect width="20" height="5"></rect>
-																</svg>
-															</td>
-															<td class="level">
-																<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Слой_1" width="20px" height="5px" x="0px" y="0px" viewBox="0 0 20 5" enable-background="new 0 0 20 5" preserveAspectRatio="none">
-																<rect width="20" height="5"></rect>
-																</svg>
-															</td>
-														</tr>
-													</tbody>
-												</table>
-												<div class="clear">
-																
-												</div>
-											</div> -->
-											<!-- <div class="levelname mark item">B1 - Intermediate
-
-											</div> -->
-											<div class="mark space">&nbsp;</div>
-										</div>
-									</li>
-								</div>
+				<div class="block languages">
+					<div class="nobreak element">
+						<div class="line">
+							<div class="header-div">
+								<h3 class="header">Languages</h3>
 							</div>
+							<li class="nobreak language">
+								<div>
+									<div class="lang subhead item">English A2</div>
+									<div class="mark space">&nbsp;</div>
+								</div>
+							</li>
 						</div>
+					</div>
+				</div>
 						<div class="block skills mt-4">
 							<div class="element">
 								<div class="nobreak">
@@ -181,9 +138,6 @@
 								</li>
 								<li class="skill item nobreak">
 									<span>Git</span>
-								</li>
-								<li class="skill item nobreak">
-									<span>JSON</span>
 								</li>
 								<li class="skill item nobreak">
 									<span>Rest API</span>
