--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<link rel="stylesheet" href="/assets/css/all.css">
 		
 		<style type="text/css">
-		div.preview {margin: auto; height: 1123px; max-height: 1123px; width: 795px; max-width: 795px; overflow-x: hidden; overflow-y: auto;}
+		div.preview {margin: auto; height: 1143px; max-height: 1143px; width: 795px; max-width: 795px; overflow-x: hidden; overflow-y: auto;}
 		body {padding: 0;margin: 0;}
 		.mark{background-color: transparent !important;}
 		body{
@@ -34,7 +34,7 @@
 	<div class="headerPreview"></div> 
 	<div class="preview public">
 		<div class="resume tpl6  fsize0 lineh0" id="8vXroeHZc5o" style="display: flex;">
-			<div class="input-content side-bar body" style="height: 1123px;">
+			<div class="input-content side-bar body" style="height: 1143px;">
 				<div class="block contacts">
 					<div class="nobreak element head">
 						<div class="photo"s>
@@ -154,7 +154,7 @@
 							<div class="element"></div>
 						</div>
 					</div>
-					<div class="input-content content-bar body" style="height: 1123px;">
+					<div class="input-content content-bar body" style="height: 1143px;">
 						<div class="block educations">
 							<div class="element univer">
 								<div class="nobreak">
@@ -261,7 +261,34 @@
 											<span>Tasks of genetic algorithms;</span>
 										</li>
 										<li class="skill item nobreak">
-											<span>Website which implements secure messaging system with encryption on eleptic curves. So was implements secure registration, authorization, session memmory. Its server developed on Node.js with framework - Express, database - MongoDB, with module - Mongoose.</span>
+											<span>Website which implements secure messaging system with encryption on eleptic curves. Was implements secure registration, authorization, unique encryption for each message. I used tech stack on this project:</span>
+											<ul class="ms-4">
+												<li>
+											 		<span>
+														Node.js;
+													</span>
+												</li>
+												<li>
+													<span>
+														Express.js;
+													</span>
+												</li>
+												<li>
+													<span>
+														express-session;
+													</span>
+												</li>
+												<li>
+													<span>
+														MongoDB;
+													</span>
+												</li>
+												<li>
+													<span>
+														Mongoose.
+													</span>
+												</li>
+											</ul>
 										</li>
 									</ul>
 								</div>
@@ -276,7 +303,7 @@
 	<style type="text/css">
 		body .preview .resume { height: auto; }
 		body .preview .resume > * { height: auto; }
-		body .input-content {min-height: 1123px;}
+		body .input-content {min-height: 1143px;}
 		body .preview { margin-bottom: 30px; width: 210mm;}
 	</style>
 	<style>body,html{min-width: 0px;background:#efefef !important;} .preview{ border: 1px solid lightgrey; max-height: unset !important; height: unset !important;}body{background:#efefef;margin: auto; overflow-x: hidden; overflow-y: hidden;}</style>
