--- a/index.html
+++ b/index.html
@@ -12,23 +12,8 @@
 		<link rel="stylesheet" href="./Front-end developer_files/webfonts.css">
 		<link rel="stylesheet" href="./Front-end developer_files/font-awesome.min.css">
 		<link rel="stylesheet" href="/assets/css/all.css">
+		<link rel="stylesheet" href="./assets/css/style.css">
 		
-		<style type="text/css">
-		div.preview {margin: auto; height: 1143px; max-height: 1143px; width: 795px; max-width: 795px; overflow-x: hidden; overflow-y: auto;}
-		body {padding: 0;margin: 0;}
-		.mark{background-color: transparent !important;}
-		body{
-			font-family: 'Roboto' !important;
-			min-width: 0px !important;
-		}
-		.contacts > div.icon::before{
-			font-size: 14px;
-			margin-top: 5px;
-		}
-		.resume a {
-			color: #444444;
-		}
-		</style>
 </head> 
 <body>
 	<div class="headerPreview"></div> 
@@ -37,8 +22,8 @@
 			<div class="input-content side-bar body" style="height: 1143px;">
 				<div class="block contacts">
 					<div class="nobreak element head">
-						<div class="photo"s>
-							<img src="/assets/foto.jpg" alt="" style="width: 100px; height: 100px; object-fit: cover; object-position: center;">
+						<div class="photo" id="photo">
+							<img src="/assets/foto.jpg" alt="" style="object-fit: cover; object-position: center;">
 						</div>
 						<div class="clear"></div>
 						<div class="fio header">Barvinko <br> Vladyslav OLEKSANDROVYCH</div>
